--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "sweetalert2": "^11.12.1",
     "vite": "^5.3.2"
   },
   "devDependencies": {
